test/files/events-obsclass-neg/non-observable.check
non-observable.scala:7: error: Klass$all not found. Make sure Klass is observable.
        val all = allInstances[Klass]
                              ^
one error found
